LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/TAT_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>TAT Configuration</label>
    <pluralLabel>TAT Configurations</pluralLabel>
</CustomObject>