LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Business_Hours_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Name__c</fullName>
    <description>The Name of the Business Hours record to use for calculating the SLA (e.g., Default)</description>
    <label>Business Hours Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>