LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Change_Owner_on_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner_on_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the record owner will be changed to the Manager or escalated user during Tier 2 and Tier 3 escalations.</description>
    <label>Change Owner on Escalation</label>
    <type>Checkbox</type>
</CustomField>