LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API Name of the target Object (e.g., Lead, Opportunity)</description>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>