LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>The Profile Name this SLA applies to (e.g., System Administrator)</description>
    <label>Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>