LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/SLA_Unit__c.field-meta.xml
<CustomField>
    <fullName>SLA_Unit__c</fullName>
    <description>The unit of the SLA duration (Hours, Minutes, Seconds)</description>
    <label>SLA Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
            <value>
                <fullName>Seconds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>