LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/SLA_Value__c.field-meta.xml
<CustomField>
    <fullName>SLA_Value__c</fullName>
    <description>The duration value of the SLA</description>
    <label>SLA Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>