LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Tier_2_SLA_Value__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_SLA_Value__c</fullName>
    <description>The duration value for Tier 2.</description>
    <label>Tier 2 SLA Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>