LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Tier_3_Override_Username__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Override_Username__c</fullName>
    <description>If populated with a valid Salesforce Username, Tier 3 escalations will go to this user instead of the Owner's Manager's Manager.</description>
    <label>Tier 3 Override Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>