LWC_TAT/force-app/main/default/objects/TAT_Configuration__mdt/fields/Tier_3_SLA_Unit__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_SLA_Unit__c</fullName>
    <description>The unit of time for Tier 3.</description>
    <label>Tier 3 SLA Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>